<package>
  <name>kml_util</name>
  <version>1.0.0</version>
  <description>
    Generate KML file from Odometry data.
  </description>
  <maintainer email="silviomaeta@gmail.com">Silvio Maeta</maintainer>
  <license>BSD</license>

  <url>http://ros.org/wiki/kml_util</url>
  <author></author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>rospy</run_depend>

  <build_depend>pythonutm</build_depend>
  <run_depend>pythonutm</run_depend>

</package>

